# warble

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  com.github.avojak.warble.yml  install-dev-dependencies.sh  meson.build  meson_options.txt  reset-game.sh  validate-words.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak.yml  lint.yml
data/: com.github.avojak.warble.appdata.xml.in.in  com.github.avojak.warble.desktop.in.in  com.github.avojak.warble.gresource.xml  com.github.avojak.warble.gschema.xml.in  dictionary.txt  meson.build  words.txt
data/assets/github/: Warble GitHub Repo Card.ai
data/styles/: ControlKeyOverlayIcon.css
data/stylesheet/: ControlKeyOverlayIcon.css  warble-dark-hicontrast.css  warble-dark.css  warble-default.css  warble-light-hicontrast.css  warble-light.css
flathub/: com.github.avojak.warble.yml
meson/: post_install.py
po/: POTFILES  ru.po
po/extra/: POTFILES  ru.po
scripts/: reset  run  validate-words.py
snap/: snapcraft.yaml
src/: ActionManager.vala  Application.vala  ColorPalette.vala  MainLayout.vala  MainWindow.vala  config.vala.in  meson.build
src/Models/: Dictionary.vala  Difficulty.vala  State.vala
src/Views/: EndgameView.vala  GameArea.vala  GameplayStatisticsView.vala  RulesView.vala  WelcomeView.vala
src/Widgets/: CheckButtonGroup.vala  ControlKey.vala  GameArea.vala  GameplayStatistics.vala  HeaderBar.vala  Key.vala  Keyboard.vala  Row.vala  Rules.vala  Square.vala
src/Widgets/Dialogs/: DefeatDialog.vala  DifficultyChangeWarningDialog.vala  GameplayStatisticsDialog.vala  NewGameConfirmationDialog.vala  ResetGameplayStatisticsWarningDialog.vala  RulesDialog.vala  VictoryDialog.vala  WelcomeDialog.vala
